--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,17 @@
+
+.DS_Store
+
 idea.md
+
+# Visual Studio Code
+.history/*
+.vscode/*
+!.vscode/extensions.json
+!.vscode/launch.json
+!.vscode/settings.json
+!.vscode/tasks.json
+
+# Node
+node_modules
+npm-debug.log
+.cache
